# indiecraft

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build-signed.bat  build.bat  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: ralph-loop.local.md
.github/workflows/: release.yml
migrations/: comments.sql  pipelines.sql  sprint_comments.sql
src/: App.tsx  index.css
src-tauri/: .tauri-updater-key.pub  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/resources/: schema.sql
src-tauri/src/: lib.rs
src/components/: UpdateNotification.tsx
src/components/ui/: badge.tsx
src/features/assets/components/: AssetCard.tsx  AssetDetailModal.tsx  AssetForm.tsx  AssetList.tsx  Dashboard.tsx
src/features/assets/hooks/: useAssetMutations.ts  useAssetRealtime.ts  useAssets.ts  useCommentMutations.ts  useCommentRealtime.ts  useComments.ts
src/features/auth/components/: AuthPage.tsx  BlockedUserScreen.tsx  LoginForm.tsx  RegisterForm.tsx
src/features/bulletin/: index.ts
src/features/goals/: index.ts
src/features/schedule/: index.ts
src/features/setup/: index.ts  schema.ts
src/features/tools/: index.ts
src/hooks/: useUpdater.ts
src/lib/: configExportImport.ts  constants.ts  supabase.ts  supabaseConfig.ts
src/stores/: navigationStore.ts  notificationStore.ts  themeStore.test.ts  themeStore.ts
src/test/: setup.ts
src/types/: config.ts  database.ts
supabase/: schema.sql
supabase/migrations/: 20260122_remove_implemented_status.sql
(+61 files in other folders)
