[package]
name = "indiecraft"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"

# Asset library dependencies
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
uuid = { version = "1", features = ["v4", "serde"] }
jwalk = "0.8"
regex = "1"
image = { version = "0.25", features = ["png", "jpeg", "tga", "bmp", "gif"] }
psd = "0.3"
base64 = "0.22"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
once_cell = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
